se colocó archivo html dentro de la carpeta src

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style/style.scss">
+    <link rel="stylesheet" href="../style/style.scss">
     <title>Andrea Velázquez Hidalgo</title>
 </head>
 
@@ -25,12 +25,12 @@
                     <h1>Andrea Velázquez</h1>
                     <p>Front-End Developer</p>
                 </div>
-                <img src="./images/Odilon_Redon_002.jpg" alt="home">
+                <img src="../images/Odilon_Redon_002.jpg" alt="home">
             </div>
         </section>
     </main>
 
-    <script src="./src/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
