--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style/style.scss">
+    <link rel="stylesheet" href="../style/style.scss">
     <title>About</title>
 </head>
 
@@ -18,12 +18,12 @@
                     <h1>Sobre mí</h1>
                     <p>INTP</p>
                 </div>
-                <img src="./images/Odilon_Redon_002.jpg" alt="about">
+                <img src="../images/Odilon_Redon_002.jpg" alt="about">
             </div>
         </section>
     </main>
 
-    <script src="./src/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
