--- a/src/about.html
+++ b/src/about.html
@@ -18,7 +18,7 @@
                     <h1>Sobre mí</h1>
                     <p>INTP</p>
                 </div>
-                <img src="../images/Odilon_Redon_002.jpg" alt="about">
+                <!-- <img src="../images/Odilon_Redon_002.jpg" alt="about"> -->
             </div>
         </section>
     </main>
