--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                     <h1>Andrea Velázquez</h1>
                     <p>Front-End Developer</p>
                 </div>
-                <img src="../images/Odilon_Redon_002.jpg" alt="home">
+                <!-- <img src="../images/Odilon_Redon_002.jpg" alt="home"> -->
             </div>
         </section>
     </main>
